hoàn thiện lại voucher và voucher item

--- a/SWGA/src/features/voucher-type/VoucherTypeList.scss
+++ b/SWGA/src/features/voucher-type/VoucherTypeList.scss
@@ -37,6 +37,7 @@ $primaryColor: #f36522;
 }
 
 .content-item {
+  width: 100%;
   margin-bottom: 0px;
 }
 
@@ -46,9 +47,7 @@ $primaryColor: #f36522;
   height: 55px;
   font-weight: 700;
   color: #000000;
-
   border-bottom: 0.5px solid var(--color-green-400);
-  padding: 5px 16px;
   // show 2 line
   overflow: hidden;
   text-overflow: ellipsis;
@@ -56,43 +55,43 @@ $primaryColor: #f36522;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   padding: 8px 16px;
-  display: flex;
-  align-items: start;
-  justify-content: center;
 }
 
 .price-item-discount {
-  display: flex;
-  align-items: center;
-  gap: 15px;
   padding: 8px 16px;
-  row-gap: 8px;
 }
 
 .container-price-brand {
   display: flex;
-  gap: 3.5rem;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .container-amount-item {
   display: flex;
-  gap: 4.5rem;
+  justify-content: center;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 .container-item {
   display: flex;
   align-items: center;
-  margin-bottom: 1.5rem;
-  margin-left: auto;
-  padding: 0 20px;
 }
 
 .sale-price-green-bean {
   color: #2ecc71;
   font-weight: bold;
   font-size: 16px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+
+  img {
+    width: 20px; // Giảm kích thước đậu
+    height: 20px;
+  }
 }
 
 .sub-title {
@@ -100,20 +99,17 @@ $primaryColor: #f36522;
 }
 
 .finish-day {
-  padding-left: 4px;
-  padding-right: 4px;
+  text-align: right;
 }
 
 .styled-day-finish {
   color: #2ecc71;
   font-size: 16px;
   font-weight: 600;
-  text-align: center;
 }
 
 .price-voucher {
-  padding-left: 4px;
-  padding-right: 4px;
+  text-align: left;
 }
 
 .discount-item {
@@ -127,15 +123,14 @@ $primaryColor: #f36522;
   text-align: center;
   justify-content: center;
   width: 50px;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  padding: 2px;
 }
+
 .itemOldPrice {
   font-size: 15px;
   text-decoration: line-through;
   filter: opacity(0.35);
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin: 0;
 }
 
 .content-item .bottom-item {
