--- a/SWGA/src/features/campaigns/CampaignCreatePage/scss/create-campaign-store.scss
+++ b/SWGA/src/features/campaigns/CampaignCreatePage/scss/create-campaign-store.scss
@@ -2,5 +2,24 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 10rem;
+    gap: 1rem; /* Adjusted from 10rem to 1rem for better spacing */
 }
+
+.ant-select-dropdown {
+    .select-campaign-container {
+        .div-option-major {
+            img {
+                margin-top: 3px !important; /* Moves the image down by 5px in the dropdown */
+            }
+        }
+    }
+}
+
+/* Target the container of each selected tag */
+// .select-campaign-major {
+//     .ant-select-selection-overflow {
+//         .ant-select-selection-overflow-item {
+//             margin-top: 1px !important; /* Apply margin-top to the entire tag container */
+//         }
+//     }
+// }
