--- a/SWGA/src/features/campaigns/CampaignPage/campaign-list/campaign-list.scss
+++ b/SWGA/src/features/campaigns/CampaignPage/campaign-list/campaign-list.scss
@@ -2,7 +2,7 @@
     width: 20px;
     height: 20px;
     margin-bottom: 0.4rem;
-    margin-left: 0.4rem;
+    margin-left: 1rem;
 }
 
 .campaign-status-tag {
@@ -11,7 +11,7 @@
         size: 13px;
     }
 
-    width: 125px;
+    width: 145px;
     height: 30px;
     text-align: center;
     border-radius: 5px;
@@ -22,4 +22,5 @@
     width: fit-content;
     max-width: 150px;
     white-space: break-spaces;
+    margin-left: 40px;
 }
