--- a/SWGA/src/features/campaigns/CampaignCreatePage/scss/campaign.scss
+++ b/SWGA/src/features/campaigns/CampaignCreatePage/scss/campaign.scss
@@ -179,19 +179,20 @@
 }
 
 .ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
-    color: #2ECC71;
+    color: #2ECC71 !important; // Màu xanh đã có sẵn
+    font-weight: 600; // Làm chữ đậm hơn để nổi bật
 }
 
 .ant-steps-horizontal:not(.ant-steps-label-vertical) .ant-steps-item-tail {
     display: none;
 }
 
-.ant-steps-item-process>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title::after {
-    background-color: #9ca3af;
+.ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
+    color: #2ECC71 ;
+    font-weight: 600;
 }
-
-.ant-steps-item-wait>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title::after {
-    background-color: #9ca3af;
+.ant-steps-item-wait > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
+    color: #6b7280 !important; // Màu xám mặc định
 }
 
 .ant-steps-item-finish>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title::after {
