--- a/SWGA/src/features/vouchers/VoucherList.scss
+++ b/SWGA/src/features/vouchers/VoucherList.scss
@@ -2,6 +2,7 @@ $primaryColor: #f36522;
 .productContainer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  margin-right: 280px;
   gap: 40px;
 }
 
