--- a/SWGA/src/features/vouchers/VoucherList.scss
+++ b/SWGA/src/features/vouchers/VoucherList.scss
@@ -87,8 +87,8 @@ $primaryColor: #f36522;
   margin-bottom: 1.5rem;
   margin-left: auto;
   padding: 0 20px;
+  gap: 0.5rem; /* Thêm khoảng cách giữa các phần tử con */
 }
-
 .sale-price-green-bean {
   color: #2ecc71;
   font-weight: bold;
