--- a/SWGA/src/features/campaigns/CampaignCreatePage/scss/campaign.scss
+++ b/SWGA/src/features/campaigns/CampaignCreatePage/scss/campaign.scss
@@ -166,8 +166,8 @@
 }
 
 .ant-steps-item-finish .ant-steps-item-icon {
-    background-color: #2ECC71;
-    border-color: #2ECC71;
+    background-color: #1c5d78;
+    border-color: #1c5d78;
 }
 
 .ant-steps-item-finish .ant-steps-item-icon>.ant-steps-icon {
@@ -175,16 +175,16 @@
 }
 
 .ant-steps-item-process>.ant-steps-item-container>.ant-steps-item-icon {
-    background: #2ECC71;
-    border-color: #2ECC71;
+    background: #1c5d78;
+    border-color: #1c5d78;
 }
 
 .ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
-    color: #2ECC71;
+    color: #1c5d78;
 }
 
 .ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
-    color: #2ECC71 !important; // Màu xanh đã có sẵn
+    color: #1c5d78 !important; // Màu xanh đã có sẵn
     font-weight: 600; // Làm chữ đậm hơn để nổi bật
 }
 
@@ -193,7 +193,7 @@
 }
 
 .ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
-    color: #2ECC71 ;
+    color: #1c5d78 ;
     font-weight: 600;
 }
 .ant-steps-item-wait > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
@@ -201,7 +201,7 @@
 }
 
 .ant-steps-item-finish>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title::after {
-    background-color: #2ECC71;
+    background-color: #1c5d78;
 }
 
 .ant-steps-item-wait>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title {
